--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "lightweight-charts": "^4.2.3",
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "rxjs": "^7.8.2",
     "zustand": "^5.0.5"
   },
